--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -211,9 +211,9 @@ BEL_BWP_desc:0 "벨기에 노동당이 국가를 통치합니다."
 BEL_LP:0 "자유당 선출"
 BEL_LP_desc:0 "폴-에밀 얀슨 아래의 자유당이 국가를 통치합니다."
 BEL_KP:0 "가톨릭당 선출"
-BEL_KP_desc:0 "파울 반 젤란트 아래의 가톨릭당이 국가를 통치합니다."
-BEL_NP:0 "베르디나소 선출"
-BEL_NP_desc:0 "사람들은 그들을 밝은 미래로 이끌기 위해 조리스 반 세브렌을 선택했습니다!"
+BEL_KP_desc:0 "파울 반 제일란트 아래의 가톨릭당이 국가를 통치합니다."
+BEL_NP:0 "베어디나소 선출"
+BEL_NP_desc:0 "사람들은 그들을 밝은 미래로 이끌기 위해 요리스 반 세베런을 선택했습니다!"
 
 BEL_Groote_Kuisch:0 "'대청소'"
 BEL_Groote_Kuisch_desc:0 "The Groote Kuisch or Large Cleanup is the slogan with which Verdinaso was able to sway the election. They promise to eradicate all career politicians and get rid of the weak and opposing members of the Government."
@@ -547,7 +547,7 @@ BEL_Improved_Relations:0 "벨기에의 우호국"
 Choose_KP:0 "가톨릭당이 선거에서 승리하다"
 Choose_LP:0 "자유당이 선거에서 승리하다"
 Choose_BWP:0 "벨기에 노동당이 선거에서 승리하다"
-Choose_NP:0 "베르디나소가 선거에서 승리하다"
+Choose_NP:0 "베어디나소가 선거에서 승리하다"
 Choose_De_Man:0 "드 만이 당을 장악하다"
 Choose_Spaak:0 "스파크가 당을 장악하다"
 Choose_Syndicalist:0 "자크모트가 당을 장악하다"
@@ -978,18 +978,18 @@ bel.35.a:0 "검은색, 노란색 그리고 빨간색으로 다시 한번!"
 #Elections in Free Belgium
 ###########
 
-bel.360.t:0 "Monarchy or Republic?"
+bel.360.t:0 "군주국과 공화국?"
 bel.360.d:0 "The German pretender has been ousted and the provisionary government has called for formal elections to be held. Two separate ballots will have to be cast, firstly deciding on which type of government the state will embrace and secondly to decide which parties will lead us through these troubling times. King Albert I, still residing in Canada is watching events at home with great interest as the people decide on whether or not he may return. The Liberal and Socialist parties are however not so keen on his return and are hoping that the people opt for a more democratic state ruled by and for the people."
-bel.360.a:0 "The monarchy will be reinstated."
-bel.360.b:0 "Belgium will reform into a Republic."
+bel.360.a:0 "왕정이 재건될 것이다."
+bel.360.b:0 "벨기에는 공화국으로서 재편될 것이다."
 
-bel.361.t:0 "Belgian Elections"
+bel.361.t:0 "벨기에 선거"
 bel.361.d:0 "As the royalist faction of the government brings back the king, the people have voted for a prime minister who will guide Belgium into the future. Verdinaso, a national party within the Flemish Council, has played an important part in the rebellion and has great plans of expansion and a greater Diets Empire. The KP, the largest pre-Weltkrieg party and biggest proponent of the rebellion in Flanders, is trying to reestablish their Party and has placed Frans van Cauwelaert as their candidate. Finally the BWP, or Belgian Workers Party, has tried to win as much support within the worker class as possible. The party however is fractured and hasn't proposed a single decisive candidate but rather three factions."
-bel.361.a:0 "Verdinaso"
-bel.361.b:0 "Catholic Party"
-bel.361.c:0 "BWP"
+bel.361.a:0 "베어디나소"
+bel.361.b:0 "가톨릭당"
+bel.361.c:0 "벨기에 노동자당"
 
-bel.362.t:0 "Belgian Elections"
+bel.362.t:0 "벨기에 선거"
 bel.362.d:0 "As decided on the First Belgian Congress, the Belgian Republic has been founded. To form a strong government however the Belgian people have voted for their first President. As the rebellion was led by many different factions there is no clear winner. The BWP, Belgian Workers Party, has been divided by internal struggles and has not proposed a clear candidate. Three main splinter factions have been created and are each proposing their own agenda. Paul-Henri Spaak, influenced by his liberal heritage has created a social liberal faction and has proposed a clear plan to guide Belgium. Another movement has declared their support for a grand industrial plan, Plan De Man, and have distanced themselves from the main party. The remnants of the party are still struggling to reform the party but have promised to continue their syndicalist agenda. Lastly there is the Liberal party, led by Paul Emile Janson, who will guide the country to the image of our Dutch neighbours."
 bel.362.a:0 "Choose De Man."
 bel.362.b:0 "Vote Social-Liberal for the best of both worlds!"
@@ -998,15 +998,15 @@ bel.362.e:0 "The Radicals Within The BWP Secure Victory"
 ###########
 #Election results in Free Belgium
 ###########
-bel.37.t:0 "Verdinaso is Elected!"
+bel.37.t:0 "베어디나소가 선출되다!"
 bel.37.d:0 "Verdinaso has succeeded in taking control over the Government and Van Severen has installed his friends and allies in all the important roles. They will try to quickly militarise Belgium and try to take as much advantage as possible of the rising tensions in Europe. Especially the Netherlands who stole our rightful land after the Treaty of London will be punished and united under our heel as Dietsland."
-bel.37.b:0 "Verdinaso will lead the Government!"
+bel.37.b:0 "베어디나소가 정부를 이끌 것이다!"
 ###########
-bel.38.t:0 "KP is Elected!"
+bel.38.t:0 "가톨릭당이 선출되다!"
 bel.38.d:0 "As the largest Belgian Party and controller of the Government from 1884 to 1921 it was the obvious choice to pick KP to rebuild the country. Fresh Head of the party Frans van Cauwelaert has been tasked with forming the Government and will hopefully guide us to a better Belgium."
-bel.38.a:0 "Good Luck van Cauwelaert!"
+bel.38.a:0 "행운을 비네, 반 쾨뵐라르트!"
 ###########
-bel.39.t:0 "BWP is Elected!!"
+bel.39.t:0 "벨기에 노동자당이 선출되다!"
 bel.39.d:0 "As the largest socialist party of Belgium and with great plans to revive the nation it comes as no surprise that the BWP has been appointed to lead the Government. There are however, two candidates vying for the place of Prime Minister. Paul-Henri Spaak, a strong socialist liberal with ideas inspired by both Liberal-leaning and syndicalist members of the party will try to launch great infrastructure overhauls to boost the working class. Hendrik De Man on the other hand is more closely leaning to the social-democratist side and will revive the Belgian economy with his famous Plan De Man. There is however discontent in the party as some of the more extreme members find the current agenda of the party far too soft and would like to reform Belgium into a Syndicalist state mirroring it's southern neigbour. They might launch a coup on the current party leadership as their movement gained much needed support in the discontent cities of Wallonia."
 bel.39.a:0 "Paul-Henri Spaak will lead the Government."
 bel.39.b:0 "Hendrik De Man will lead the Government."
@@ -1022,13 +1022,13 @@ bel.393.t:0 "Jacquemotte Takes Control of the BWP-led Government"
 bel.393.d:0 "During the struggles within the party, Joseph Jacquemotte has taken firm control of the party and ousted both the Spaak and De Man factions with a swift blow. He will now try to reform the party into a stronger syndicalist player to avoid further splinter factions."
 bel.393.a:0 "Good luck Jacquemotte!"
 ###########
-bel.40.t:0 "LP is Elected!"
+bel.40.t:0 "자유당이 선출되다!"
 bel.40.d:0 "The elections are over and the Liberalist party has won. Though it has been a long time since the liberals led the Belgian government a fresh wind may be necessary to rebuild the ruined country. The liberalists may not have as grand ambitions as the BWP or Verdinaso, they believe that little state control and more rights for the citizen are the way to go."
-bel.40.a:0 "Good Luck Janson!"
+bel.40.a:0 "행운을 비네, 얀슨!"
 
-bel.41.t:0 "King Albert I Returns!"
+bel.41.t:0 "국왕 알베르트 1세가 귀환하다!"
 bel.41.d:0 "As the Royalists restore the monarchy King Albert I, formerly known as Van Saksen-Coburg Gotha now as Van België, sets sail in Canada as the first king restored to his country. Over in Belgium all preparations are made for Albert to swiftly and without issues remount his throne."
-bel.41.a:0 "Long live Albert I!"
+bel.41.a:0 "알베르트 1세 만세!"
 
 bel.42.t:0 "Plan De Man"
 bel.42.d:0 "With Hendrik De Man and his social democrat government firmly in control, they start to unravel the first phases of their plan. To combat the depression caused by Black Monday they have decided to switch to a planned economy. This plan consists of the creation of 5 Economic Secretaries led by technocrats to oversee the further steps. They will have the primary task to rebuild the country by reducing unemployment and starting to nationalise the Basic Industries. With these industries under control they will then better be able to guide Belgium to economic stability and prevent another crisis."
@@ -1051,72 +1051,72 @@ bel.45.d:0 "With Verdinaso firmly in control of the Government they have started
 bel.45.a:0 "Very well."
 
 #Treaty of Arlon
-bel.461.t:0 "The Belgian Revolution"
-bel.461.d:0 "While we were busy solving our own problems, Adelbert, king of Flanders-Wallonia, has been deposed and sent packing by his people. Even though this an outrageous event we have to handle the situation carefully as a war will hinder our recovery and may provoke syndicalist aggression. Delegates of the new Belgian state however, have come up with a proposal of their own. They request we sign a treaty guaranteeing their newfound sovereignty, and rebalancing our currently one-sided economic system. In exchange they would rejoin the Reichspakt, expand their army and be our first line of defence against the syndicalist threat. German holdings and companies would remain in charge of large parts of the industry and special programmes would temporarily be kept aiding German citizens in their integration into Belgium, or alternatively their return home."
-bel.461.a:0 "Accept their proposal and organise the Congress of Arel."
-bel.461.b:0 "Germans do not give in, attack at once!"
+bel.461.t:0 "벨기에 혁명"
+bel.461.d:0 "우리가 우리 자신의 문제를 해결하느라 바빴던 틈에, 플란데런-우알로니의 왕 아델베르트는 그의 백성들에 의해 퇴위당하고 귀국하게 되었습니다. 이는 분명 말도 안 되는 일입니다만, 전쟁이 우리의 회복을 방해하고 생디칼리스트들의 공격을 촉발시킬 수 있기 때문에 우리는 조심스럽게 대처할 수밖에 없었습니다. 하지만, 새로운 벨기에의 대표단이 본인들의 제안을 내놓았습니다. 그들은 우리가 그들의 온전한 주권을 보장하는 조약에 서명하고 현재의 일방적인 경제 체제를 재조정할 것을 요구하고 있습니다. 그 대신 그들은 제국 조약에 다시 합류하고, 그들의 군대를 확장시켜 생디칼리스트들의 위협에 대한 우리의 제1 방어선이 될 것을 자처했습니다. 독일 소유주와 기업들이 여전히 벨기에 경제를 지배하고 있는 부분에 대해서는, 일시적인 특수 프로그램을 통해 독일 시민들에게 벨기에 국적을 부여하거나, 아니면 그들의 귀국을 도울 것이라고 벨기에 대표단은 설명했습니다."
+bel.461.a:0 "그들의 제안을 받아들이고 아렐 회의를 조직하라."
+bel.461.b:0 "독일은 굴복하지 않는다. 즉시 공격하라!"
 
-bel.462.t:0 "Belgium Demands Yet More"
-bel.462.d:0 "Even though we agreed to nearly all of their demands and almost reached an accord, the Belgian Prime Minister suddenly rose up and declared that no treaty would be signed unless we hand over Luxemburg. This was met with protest from our outraged delegates refusing to accept such ridiculous demands. Some see this sudden u-turn however as an excuse to stay out of the Reichspakt and search for other allies."
-bel.462.a:0 "Leave the Congress."
-bel.462.b:0 "Accept their extra demands."
+bel.462.t:0 "벨기에가 더 많은 것을 요구하다"
+bel.462.d:0 "우리가 그들의 거의 모든 요구에 동의했고 합의점을 찾기 위해 최대한 배려해주었음에도 불구하고, 벨기에 수상이 갑자기 자리에서 일어나 우리가 룩셈부르크를 넘겨주지 않는 한 어떠한 조약도 체결되지 않을 것이라고 선언했습니다. 격분한 우리 대표단은 이 터무니없는 요구를 즉시 거절하고 항의했습니다. 그러나 일부에서는 그들의 이런 갑작스러운 비협조적 태도를 제국 조약에서 벗어나 다른 동맹국들을 찾는 구실로 보고 있습니다."
+bel.462.a:0 "회의를 떠나라."
+bel.462.b:0 "그들의 추가적인 요구를 들어줘라."
 
-bel.463.t:0 "The German Empire Accepts"
-bel.463.d:0 "To the immense surprise of all, the German delegation has given in and accepted our claims on Luxemburg. An agreement has been reached and the treaty signed. Only formalities and the evening gala remain."
-bel.463.a:0 "This is fantastic!"
+bel.463.t:0 "독일 제국이 동의하다"
+bel.463.d:0 "놀랍게도 독일 대표단은 룩셈부르크에 대한 우리의 요구를 받아들였습니다. 합의는 끝났으며 조약이 체결되었습니다. 이제 형식적인 저녁 만찬만이 남았습니다."
+bel.463.a:0 "이거 환상적이군!"
 
-bel.464.t:0 "Treaty of Arel"
-bel.464.d:0 "With an official ceasefire between the Empire and the Belgian rebels, we have agreed to listen to their demands. They demand full independence from Germany but promise to remain in the Reichspakt military alliance to assist us on the western border. While agreeing to these demands could be seen as a disgrace to the mighty German behemoth and could perhaps even spark resistance in the East, we have to avoid overextending ourselves in these times of crisis."
-bel.464.a:0 "The treaty is signed!"
-bel.464.b:0 "Germany will not bow for these rebels!"
+bel.464.t:0 "아렐 조약"
+bel.464.d:0 "제국과 벨기에 반군 간의 공식적인 휴전을 위해, 우리는 그들의 요구를 들어주기로 합의했습니다. 그들은 독일로부터 완전한 독립을 요구하지만, 서쪽 국경선에서 우리에게 힘을 보태기 위해 제국 조약 군사 동맹에는 계속 잔류할 것을 약속했습니다. 이러한 요구에 동의하는 것은 '초강대국' 독일에게는 불명예로 보여질 수 있고 동유럽 동맹들의 저항마저 불러일으킬 수도 있지만, 우리는 위기의 시기에 우리 자신을 과도하게 노출시키는 것을 피해야 합니다."
+bel.464.a:0 "조약이 체결되었다!"
+bel.464.b:0 "독일은 이런 반란군에게 고개숙이지 않는다!"
 
-bel.46.t:0 "Treaty of Arel"
-bel.46.d:0 "Deep in the Ardennes, in the city of Arel, German and Belgian representatives have gathered to discuss the future relations between the two countries. Multiple proposals have been put on the table by both sides until finally an agreement was reached. Belgium would stay in the Reichspakt and help the German Empire in its wars in exchange full recognition of its sovereignty. While the German delegation can be persuaded to recognize our independence, all requests for the return of Belgian Luxemburg have thus far been swept off the table."
-bel.46.a:0 "The treaty is fine as is. Sign it."
-bel.46.b:0 "Belgium will only accept in exchange for Luxemburg!"
+bel.46.t:0 "아렐 조약"
+bel.46.d:0 "아르덴 숲 깊숙한 곳에 위치한, 아를 시에 모인 독일과 벨기에 대표들이 양국의 향후 관계를 논의하기 위해 모였습니다. 합의점을 찾기 위해 양측이 여러 건의 제안서를 제출했습니다. 벨기에는 독일 제국이 벨기에의 주권을 완전히 인정한다면, 향후 있을 독일 제국의 전쟁을 도울 것을 약속했습니다. 독일 대표단은 우리의 독립에는 어느 정도 수긍하는 듯 보였지만, 벨기에령 룩셈부르크의 반환 요청은 지금까지 모두 단호히 거절했습니다."
+bel.46.a:0 "이 정도면 나쁘지 않다. 서명하자"
+bel.46.b:0 "벨기에는 룩셈부르크가 반환되어야만 동의하겠다!"
 
-bel.47.t:0 "Arel Treaty Talks Fail"
-bel.47.d:0 "The German Empire has refused our proposal and decided to leave the summit. There will be no alliance this time and no concessions."
-bel.47.a:0 "We will seek other allies."
+bel.47.t:0 "아렐 조약이 결렬되다"
+bel.47.d:0 "독일 제국은 우리의 제안을 거절하고 협의를 끝내기로 결정했습니다. 이번에는 동맹도 양보도 없을 것입니다."
+bel.47.a:0 "우리는 다른 동맹을 찾을 것이다."
 
-bel.48.t:0 "Treaty of Arel Signed"
-bel.48.d:0 "With the Belgian government agreeing to the German terms, the treaty has been signed. Germany will recognise Belgian independence and in exchange Belgium will remain in the Reichspakt."
-bel.48.a:0 "Together we stand strong."
+bel.48.t:0 "아렐 조약이 체결되다"
+bel.48.d:0 "벨기에 정부가 독일이 제시한 조건에 동의함에 따라, 조약이 체결되었습니다. 독일은 벨기에의 독립을 인정하고, 그 대가로 벨기에는 제국 조약에 잔류할 것입니다."
+bel.48.a:0 "우리는 함께일수록 강하다."
 #Treaty of Arlon signed
-bel.483.t:0 "Integrating Southern Wallonia"
+bel.483.t:0 "남부 우알로니 통합"
 bel.483.d:0 "German Wallonia has finally been recuperated! The last formalities have been finished and Fernand Van den Corput has been put in charge of the regained territory. With enough support from the Belgian State we hope for a speedy recovery of the industry in the neglected German territory."
-bel.483.a:0 "Very well."
+bel.483.a:0 "좋았어."
 #
-bel.49.t:0 "Flemish Resistance Calls For Aid"
+bel.49.t:0 "플란데런 저항군이 지원을 요청하다"
 bel.49.d:0 "Backed into a corner by superior Flemish-Walloon forces, the remnants of the Flemish resistance have contacted us to request intervention in the Second Belgian Revolution. They are willing to support reunification with the Netherlands should we assist them and are hoping for a peaceful resolution to the conflict through our influence."
-bel.49.a:0 "Support the Flemish resistance."
-bel.49.b:0 "Stay out of German affairs."
+bel.49.a:0 "플란데런 저항군을 지원하라."
+bel.49.b:0 "독일의 문제에 관여하지 마라."
 
-bel.50.t:0 "End of the Flemish Resistance"
+bel.50.t:0 "플란데런 저항군의 종식"
 bel.50.d:0 "With no support from the Dutch nor Walloons, the Flemish resistance will inevitably slowly get pushed back by the better equipped German Empire."
-bel.50.a:0 "We will put a swift end to this rebellion!"
+bel.50.a:0 "우리는 이 반란을 빠르게 끝장낼 것이다!"
 
-bel.51.t:0 "Dutch Intervention: Treaty of Terneuzen"
-bel.51.d:0 "Dutch officials have agreed to the requests of the Flemish resistance and have sent in Dutch divisions to secure the cities of Antwerpen and Gent. While our Flemish-Walloon divisions are no match for the numerically stronger Dutch forces, they have taken a big risk by angering the German giant."
-bel.51.a:0 "We can only wait for an answer from Berlin."
+bel.51.t:0 "네덜란드의 개입: 테르뇌전 조약"
+bel.51.d:0 "네덜란드는 플란데런 저항군의 요청에 동의했으며 안트베르펀과 겐트 시를 확보하기 위해 네덜란드군 사단을 파견했습니다. 우리 플란데런-우알로니 육군이 수적으로 압도적인 네덜란드군과 대적할 수는 없지만, 네덜란드의 이 행위로 인해 독일이라는 거인이 분노했다는 점이 변수입니다."
+bel.51.a:0 "베를린의 대응을 기다리는 수밖에 없겠군."
 
-bel.77.t:0 "Flanders Secedes From the Union"
+bel.77.t:0 "플란데런이 연합에서 탈퇴하다"
 bel.77.d:0 "After our troops fell back safely to the Language Border, granting the Dutch control over the major Flemish cities, the Flemish government has announced their independence. As agreed upon in the treaty of Terneuzen, they immediately afterwards rejoined the Kingdom of the Netherlands for protection."
-bel.77.a:0 "Lang Leve Vlaanderen! (play as Flanders)"
-bel.77.b:0 "We will bring them back into the fold."
+bel.77.a:0 "플란데런 만세! (플란데런으로 플레이합니다)"
+bel.77.b:0 "우리는 그들을 다시 복속시킬 것이다."
 
-bel.771.t:0 "Dutch Takeover of Flanders"
-bel.771.d:0 "During the independence stuggle currently going on in Flanders-Wallonia, it seems that the Dutch have stepped in and retaken control over Flanders as agreed upon in the Treaty of Terneuzen. This is however an outrageous infraction on our Reichspakt alliance and as such we can send them an ultimatum to either join us or die fighting. The Dutch are very likely to agree to our very reasonable terms and it may even prove to provide better stability on our western border."
-bel.771.a:0 "Send the ultimatum."
-bel.771.b:0 "They infringed on our sovereignty, we will declare war at once!"
-bel.771.c:0 "Back down, we have more important matters."
+bel.771.t:0 "네덜란드가 플란데런을 강탈하다"
+bel.771.d:0 "현재 플란데런-우알로니에서 진행되고 있는 격렬한 저항을 틈타서, 네덜란드가 테르뇌전 조약에서 합의된 대로 플란데런에 대한 통제권을 탈취한 것으로 보입니다. 그러나 이것은 우리 제국 조약의 동맹에 대한 터무니없는 조롱입니다. 따라서 우리는 최후 통첩을 보내 그들이 우리의 동맹에 합류하던지, 싸우다가 죽던지 선택하도록 할 수 있습니다. 네덜란드인들은 아마 우리의 매우 자비로운 이 조건에 동의할 가능성이 높으며, 이는 오히려 우리의 서부 국경에서 더 나은 안정성을 제공할 수도 있습니다."
+bel.771.a:0 "최후 통첩을 보내라."
+bel.771.b:0 "그들은 우리의 주권을 침해했다. 즉시 전쟁을 선포하라!"
+bel.771.c:0 "다들 진정해라. 더 중요한 문제가 있지 않은가."
 
-bel.772.t:0 "German Ultimatum"
+bel.772.t:0 "독일의 최후 통첩"
 bel.772.d:0 "Unhappy with our recent expansion into their territory, the Reich has given us the chance to right our supposed fault and join their Reichspakt alliance. They strongly insisted that disobeying their request will result into an immediate declaration of war, for which we are not at all prepared."
-bel.772.a:0 "We will join them."
-bel.772.b:0 "Come and get us!"
+bel.772.a:0 "우리는 동맹에 합류할 것이다."
+bel.772.b:0 "와서 가져가보시지!"
 
-bel.52.t:0 "We have Refused!"
+bel.52.t:0 "우리는 거절당했다!"
 
 bel.53.t:0 "Schelde Discussion"
 bel.53.d:0 "Ever since the Treaty of London we have been relying on the Dutch to dredge the Westerschelde. Without this, the harbour of Antwerp can't be reached by large cargo ships thus hindering our trade potential. As the south bank of the river is mainly populated by Flemish people we propose that the Dutch government helps us in exchange for us abandoning our claim on Zeeuws-Vlaanderen."
