--- a/Kaiserreich Korean Translation/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -115,7 +115,7 @@ BHC_speech_industry:0 "'산업은 승리를 향한 길이다'"
 BHC_speech_industry_desc:0 "The first order of business with be for Huq and Nehru to address the nation - the Moderates are expected to take a realistic and gradual approach to the nation's advancement, focusing on its industrial growth and the reform of unjust policies to spur on the speed of social change. To many in the nation, this will be received with nothing short of a sigh of relief."
 BHC_spread_revolution:0 "혁명 전파"
 BHC_spread_revolution_desc:0 "Moderate attitudes to growth do not mean a surrender to the forces of colonialism and oppression which yet remain arrayed against the Commune. Towards that end, it is necessary for the government to reach out to those revolutionaries in the north and west who quietly remain, ready to act on a moment's notice."
-BHC_create_raw:0 "연구및 분석"
+BHC_create_raw:0 "연구 및 분석"
 BHC_create_raw_desc:0 "Knowledge is our greatest weapon - knowledge of what our enemies are doing, and the ability to deceive them with misinformation. Towards that end, a new wing of the military shall be funded which will increase our intelligence capabilities throughout the sub-continent and beyond."
 BHC_production_focus:0 "생산 집중"
 BHC_production_focus_desc:0 "As part of the Moderates' plan to spur on the Commune's industrial growth, several population centres have been earmarked to receive an influx of cash and construction."
@@ -229,7 +229,7 @@ BHC_expand_dockyard:0 "Expand the Calcutta Shipyards"
 BHC_expand_dockyard_desc:0 "A concerted effort must be made to expand the Calcutta shipyards once again. Our shipbuilding efforts are our only hope of strength on the high seas!"
 BHC_adv_command_3:0 "해양 지배"
 BHC_adv_command_3_desc:0 "Our primary focus is on our navy - yes, this may come at the expense of our army and air capabilities, but the Commune must recognise where its strength lies and maximise its effectiveness."
-BHC_third_internationale:0 "제 3인터내셔널"
+BHC_third_internationale:0 "제3인터내셔널"
 BHC_third_internationale_desc:0 "The First Congress of the Third Internationale is soon to be called, and our attendance may mean our only chance at obtaining aid from syndicalist nations abroad."
 #BHC_invite_hochiminh:0 "Invite Ho Chi Minh"
 #BHC_invite_hochiminh_desc:0 "In Paris, a group of Indochinese revolutionaries under the leadership of Nguyen Sinh Con, also known as Ho Chi Minh, have announced their decision to form a united leftist government in exile whose declared goal is to topple German colonial rule. It has been suggested that our government invite Ho Chi Minh and his comrades to Calcutta and place all available resources at their disposal."
@@ -253,7 +253,7 @@ BHC_attack_prf:0 "Take Hyderabad"
 BHC_attack_prf_desc:0 "The decadent princes of the west have too long been a threat. We must strike preemptively, with the element of surprise!"
 BHC_prf_rebellion:0 "Socialists of the West Unite!"
 BHC_prf_rebellion_desc:0 "Simply attacking the west may not be enough - it may be risky, but we could also contact socialist elements within the Princely Federation and get them to rise up even as we attack. It would raise the possibility of Princely forces being harassed behind their own lines. There is, however, the chance our plans could be betrayed, and our enemies given advance notice of our attack."
-BHC_unite_india:0 "인도 통일"
+BHC_unite_india:0 "통일된 인도"
 BHC_unite_india_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
 BHC_special_INC_meeting:0 "Call a Meeting of the INC"
 BHC_special_INC_meeting_desc:0 "With India united, the first order of business will be to gather a special session of the Indian National Congress to determine how we will approach the governance of the nation as a whole. With this comes a new election for head of state. It will be an important day, and one that determines what the future direction of a united India will look like."
