--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -691,7 +691,7 @@ belmil.12.d:0 "카이저께서는 우리의 공군이 확장되어야 하는 이
 belmil.12.a:0 "훌륭하셔라."
 
 bel.1.t:0 "36년 2월 17일의 재앙"
-bel.1.d:0 "아델베르트 1세가 벨기에의 왕좌에 올라 왕국을 통치하기 시작한 날을 기념하는 2월 17일은 매년 수도에서 기념행사를 통해 기념되고 있습니다. 올해 역시 군사 퍼레이드와 팡파르가 행사의 시작을 알렸고, 12시가 되자 아델베르트는 바란드 광장이 한눈에 내려다보이는 궁전의 발코니에 올랐습니다.\n\n그가 사람들에게 또 다른 평화로운 해를 축하하며 연설을 마치려는 순간, 큰 소리가 궁전의 돌담에 울려퍼졌습니다. 군중들 가운데 한 무리의 반군이 왕의 방향으로 총을 발사한 것입니다. 그들은 "Vive la Révolution(프랑스어, 혁명 만세)"과 "Weg met de mof!(네덜란드어, 독일놈을 죽여라!)"를 외쳤습니다. 수십 명의 남녀가 군중 속에서 조직적인 습격을 위한 전술적인 위치에 각각 배치되어 사람들을 규합하기 시작했고, 그들은 곧 궁궐을 습격할 준비를 마쳤습니다.\n\n경찰이 빠르게 동원되어 궁궐 문 주위에 방어선을 형성했으나, 주변의 거리로 흩어진 군중들에 의해 폭동은 아주 빠르게 퍼져나갔고, 곧이어 한 지역의 경찰이 감당하기에 이 사태는 지나치게 커졌습니다."
+bel.1.d:0 "아델베르트 1세가 벨기에의 왕좌에 올라 왕국을 통치하기 시작한 날을 기념하는 2월 17일은 매년 수도에서 기념행사를 통해 기념되고 있습니다. 올해 역시 군사 퍼레이드와 팡파르가 행사의 시작을 알렸고, 12시가 되자 아델베르트는 바란드 광장이 한눈에 내려다보이는 궁전의 발코니에 올랐습니다.\n\n그가 사람들에게 또 다른 평화로운 해를 축하하며 연설을 마치려는 순간, 큰 소리가 궁전의 돌담에 울려퍼졌습니다. 군중들 가운데 한 무리의 반군이 왕의 방향으로 총을 발사한 것입니다. 그들은 "Vive la Révolution(프랑스어, 혁명 만세)"과 "Weg met de mof!(네덜란드어, 독일놈을 타도하라!)"를 외쳤습니다. 수십 명의 남녀가 군중 속에서 조직적인 습격을 위한 전술적인 위치에 각각 배치되어 사람들을 규합하기 시작했고, 그들은 곧 궁궐을 습격할 준비를 마쳤습니다.\n\n경찰이 빠르게 동원되어 궁궐 문 주위에 방어선을 형성했으나, 주변의 거리로 흩어진 군중들에 의해 폭동은 아주 빠르게 퍼져나갔고, 곧이어 한 지역의 경찰이 감당하기에 이 사태는 지나치게 커졌습니다."
 bel.1.a:0 "조금 양보해서 시위대를 달래 주어라."
 bel.1.b:0 "군을 투입해라!"
 bel.1.c:0 "우리는 그들이 진정하기를 기다려야 한다."
@@ -781,7 +781,7 @@ bel.12.t:0 "생디칼리스트들이 홀로서다"
 bel.12.d:0 "After we successfully cut the communications between Flemish and Walloon resistance, the syndicalists of Wallonia stand alone. With no real way to get support for their own free syndicalist state, they will have to seek aid from the Commune of France."
 bel.12.a:0 "결국엔 우리가 이긴다!"
 
-bel.13.t:0 "생디칼리스트들이 다시 공격을 시작했습니다!"
+bel.13.t:0 "생디칼리스트들의 재습격!"
 bel.13.d:0 "After the catastrophic attack on the Charleroi headquarters the syndicalists are planning a massive terrorist attack on our infrastructure. We are however unable to reinforce both the army bases and our industrial complexes so we need to make a choice."
 bel.13.a:0 "군 기지를 보호하라!"
 bel.13.b:0 "산업시설을 보호하라!"
@@ -813,29 +813,29 @@ bel.14.a:0 "Fall back into Antwerp, Limburg and Flemish-Brabant!"
 bel.14.b:0 "Fall back into Flemish-Brabant!"
 bel.14.c:0 "Reinforce all provinces!"
 
-bel.15.t:0 "11th of July"
+bel.15.t:0 "7월 11일"
 bel.15.d:0 "The 11th of July 1302 will always be remembered as the great victory over the French army at the Guldensporenslag. On this day an inferior Flemish army defeated the French knights. This victory marked an important point in the creation of the Independent Flemish movement and has been immortalised in the roman by "De leeuw van Vlaanderen" by Hendrik Conscience. With the temporary retreat of the German forces the Flemish Resistance memorises this day and has proclaimed the 11th of July a national holiday."
-bel.15.a:0 "Vlaanderen de Leeuw!"
+bel.15.a:0 "플란데런의 사자들이여!"
 
-bel.16.t:0 "11th of July"
+bel.16.t:0 "7월 11일"
 bel.16.d:0 "The 11th of July 1302 will always be remembered as the great victory over the French army at the Guldensporenslag. On this day an inferior Flemish army defeated the French knights. This victory marked an important point in the creation of the Independent Flemish movement and has been immortalised in the roman by "De leeuw van Vlaanderen" by Hendrik Conscience. With German forces spread thin to suppress the resistance the Flemish Resistance has prepared a massive attack to liberate the cities of Bruges, Gent, Kortrijk and Oostende. Due to our small forces we were quickly overrun and after 5 hours of heavy fighting our last stronghold at the Gravensteen in Ghent fell and the Flemish Lion proudly waves atop its battlements."
-bel.16.a:0 "We have lost control over West and East Flanders!"
+bel.16.a:0 "동서부 플란데런을 모두 잃어버렸는가!"
 
-bel.17.t:0 "The Flemish Offer a Deal"
-bel.17.d:0 "After the loss of great parts of Flanders, the Flemish Resistance has proposed a deal. They demand independence from Flanders-Wallonia and immediate retreat off all German forces out of Flandres. In exchange they are willing to remain part of the Reichspakt and fulfil their role as buffer state and will not aid the Syndicalists in Wallonia in their struggle."
-bel.17.a:0 "We have no choice but to accept these demands. (Play as Wallonia)"
-bel.17.c:0 "We have no choice but to accept these demands. (Play as Flanders)"
-bel.17.b:0 "Never! How dare they assume we would accept their proposal!"
+bel.17.t:0 "플란데런인들이 협상을 제안하다"
+bel.17.d:0 "플란데런의 상당 부분을 상실한 후, 플란데런 저항군이 협상을 제안했습니다. 그들은 플란데런-우알로니로부터의 완전한 독립과, 모든 플란데런 주둔 독일군의 철수를 요구합니다. 그 대신, 그들은 여전히 제국 조약에 잔류해 완충국으로서의 그들의 역할을 기꺼이 수행할 것이며, 우알로니의 생디칼리스트들을 일절 돕지 않을 것입니다."
+bel.17.a:0 "받아들이는 수밖에 없구나. (우알로니로 플레이합니다)"
+bel.17.c:0 "받아들이는 수밖에 없구나. (플란데런으로 플레이합니다)"
+bel.17.b:0 "절대로! 어떻게 감히 그렇게 건방진 제안을 할 수 있는가!"
 
-bel.18.t:0 "Walloons Hear of Flemish Victories"
+bel.18.t:0 "플란데런의 승리를 전해들은 우알로니"
 bel.18.d:0 "After the victories of the Flemish Resistance over the German forces the Walloons now have the opportunity to decide whether or not to work together with the Flemish for an unified Belgium or to seek affiliation with the Commune of France. The syndicalists are inclined towards joining the Commune and helping spread the socialist revolution. On the other hand the royalists would prefer to work together with the Flemish to unify the country and reinstate the king. After days of frenzied discussion the doors of the headquarters finally open and the decision is announced."
-bel.18.a:0 "We shall seek unification with the French Commune."
-bel.18.b:0 "We shall approach our Flemish brethren and try to rebuild Belgium."
+bel.18.a:0 "우리는 프랑스 코뮌과의 합병을 추진할 것이다."
+bel.18.b:0 "우리 플란데런 동포들과 함께 벨기에를 재건하자."
 
-bel.19.t:0 "Flandres Receives Walloon Deal"
+bel.19.t:0 "플란데런이 우알로니의 제안을 전해받다"
 bel.19.d:0 "After the proposal to the German government failed, the Flemish have now received a deal from the Walloon movement. They ask the Flemish to work together with them to ensure independence for all of Belgium and to reinstate the king."
-bel.19.a:0 "No. Flanders shall be independent!"
-bel.19.b:0 ""Eendracht maakt Macht!""L'union fait la force!""Unity is Strength!""
+bel.19.a:0 "아니, 플란데런은 독립적으로 나아간다!"
+bel.19.b:0 ""Eendracht maakt Macht!""L'union fait la force!""단결은 힘이다!""
 
 bel.20.t:0 "Hainaut Attacks"
 bel.20.d:0 "After the Flemish and Walloons made their pact to unify Belgium, they launched an assault on the German Administration Offices in Mons and secured the governor and his family. They are now held hostage and the rebels are demanding the withdrawal of German forces from Hainaut. We have surrounded the building and are ready to move in if necessary. The chances of extracting the governor successfully are slim but we could re-secure the building to reinforce it against further attacks and to tighten our grip on the province."
