--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -75,23 +75,23 @@ BEL_Nationalise_Basic_desc:0 "벨기에 정부와 BWP는 기본 산업에 대한
 BEL_Repairing_Damage:0 "플란데런 재건 노력"
 BEL_Repairing_Damage_desc:0 "플란데런의 도시 환경과의 격렬한 싸움과 플란데런에서의 테러 공격으로 인한 피해 때문에 엔트워프 항구, 헨트 및 제브류헤 항구의 산업 지형이 광범위하게 재건 자금을 기다리고 있습니다."
 BEL_Language_Trouble_FO:0 "언어 문제가 부분적으로 해결되다"
-BEL_Language_Trouble_FO_desc:0 "플란데런의 충성도를 확보하고 그 지역을 장악하려는 노력의 일환으로 플란데런 시민들은 제한된 자치권을 받을 수 있습니다."
+BEL_Language_Trouble_FO_desc:0 "플란데런인들의 민심을 진정시키고 해당 지역을 확고히 장악하기 위한 노력의 일환으로, 플란데런 시민들은 제한된 자치권을 부여받았습니다."
 BEL_Language_Trouble_WO:0 "언어 문제가 부분적으로 해결되다"
-BEL_Language_Trouble_WO_desc:0 "플란데런와 우알로니 지역의 제한된 자치권과 우알로니와 플란데런 지역에서 군대 분할을 허용함으로써 우리는 웰세계대전때 우리를 괴롭히던 언어 문제를 피할 수 있습니다."
-BEL_Risk_Famine:0 "기근 위험"
-BEL_Risk_Famine_desc:0 "이미 제한된 식량 공급품의 상당 부분이 독일 제국을 지원하기 위해 수출되기 때문에 올 겨울에는 식량 부족이 올 것으로 예상됩니다."
-BEL_Risk_Famine_small:0 "작은 기근 위험"
-BEL_Risk_Famine_small_desc:0 "이미 제한된 식량 공급품의 상당 부분이 독일 제국을 지원하기 위해 수출되기 때문에 올 겨울에는 식량 부족이 올 것으로 예상됩니다."
+BEL_Language_Trouble_WO_desc:0 "플란데런과 우알로니 지역에 제한된 자치를 허용하고, 플란데런인과 우알로니인을 각각 다른 부대에 배치함으로써 우리는 세계대전 이후로 쭉 우리를 괴롭혀오던 언어 문제를 다소 해결할 수 있었습니다."
+BEL_Risk_Famine:0 "기근 위기"
+BEL_Risk_Famine_desc:0 "안그래도 제한된 식량 공급의 상당량이 독일 제국의 지원을 위해 수출되기 때문에 올 겨울에는 식량부족 사태가 닥칠 것으로 예상됩니다."
+BEL_Risk_Famine_small:0 "작은 기근 위기"
+BEL_Risk_Famine_small_desc:0 "안그래도 제한된 식량 공급의 상당량이 독일 제국의 지원을 위해 수출되기 때문에 올 겨울에는 식량부족 사태가 닥칠 것으로 예상됩니다."
 BEL_Well_Fed:0 "풍년"
-BEL_Well_Fed_desc:0 "풍성한 수확과 대규모 정부 예방 프로그램 덕분에 우리는 추운 겨울을 쉽게 넘길 수 있을 것입니다."
+BEL_Well_Fed_desc:0 "풍부한 수확량과 정부 차원의 대규모 대비 프로그램 덕분에, 우리는 추운 겨울을 쉽게 넘길 수 있을 것입니다."
 BEL_Tax:0 "독일의 긴급 과세"
-BEL_Tax_desc:0 "독일의 경제 회복을 돕기 위해 카이저는 플란데런-우알로니의 부유한 땅에 새로운 세금을 부과했습니다."
+BEL_Tax_desc:0 "독일의 경제 회복을 돕기 위해, 카이저는 부유한 지역인 플란데런-우알로니에 새로운 세금을 부과했습니다."
 BEL_Tax_small:0 "독일의 소규모 과세"
-BEL_Tax_small_desc:0 "독일의 경제 회복을 돕기 위해 카이저는 플란데런-우알로니의 부유한 땅에 새로운 세금을 부과했습니다."
+BEL_Tax_small_desc:0 "독일의 경제 회복을 돕기 위해, 카이저는 부유한 지역인 플란데런-우알로니에 새로운 세금을 부과했습니다."
 BEL_Bad_Deal:0 "친독 무역 협정"
 BEL_Good_Deal:0 "친플란데런-우알로니 무역 협정"
 BEL_Schelle_Power:0 "셸러 발전소"
-BEL_Schelle_Power_desc:0 "우리나라의 막대한 전력 수요를 유지하기 위해 건설된 셸러 발전소는 대륙에서 가장 규모가 크며 우리 산업의 발전에 도움이 될 것입니다."
+BEL_Schelle_Power_desc:0 "유럽에서 가장 큰 규모를 자랑하는 셸러 발전소는 우리나라의 막대한 전력 수요를 충당하기 위해 건설되었으며, 우리 산업의 발전에 큰 도움이 될 것입니다."
 BEL_Cement_Export:0 "시멘트 수출"
 BEL_Cement_Export_desc:0 "검은 월요일 위기로 인해 제국 조약의 많은 정부는 복구를 시작하기 위해 대규모 건설 프로젝트에 자금을 지원하기로 결정했습니다. 우리는 시멘트 수출을 확대함으로써 큰 석유 화학, 철강 및 섬유 산업이 회복 될 때까지 우리 경제를 다시 도울 수 있게 도와줌으로써 기꺼이 이익을 얻고 있습니다."
 BEL_Abolish_Flemish_Council_idea:0 "플란데런 의회 폐지"
@@ -379,17 +379,17 @@ BEL_Schelle:0 "셸 발전소 가동"
 BEL_Schelle_desc:0 "Due to recent expansions of the industrial power of Flanders we need a new power plant to meet demands. Plans for the largest Power Plant in Europe have been shown to the Government and they have decided to execute these to show the world the ingenuity and technological prowess of our small country."
 BEL_Antwerp:0 "앤트워프 항구 확장"
 BEL_Antwerp_desc:0 "We control one of the largest ports in Europe and are a vital lifeline for Mitteleuropa imports. Expanding our docks and improving our infrastructure around Antwerp would be a huge boon for our recovery."
-BEL_Shipping:0 "독일 해운 의존성 증가"
-BEL_Shipping_desc:0 "The German Empire considers our Harbour one of the most important in its sphere of influence as it is easily accessible by sea and has expansive infrastructure linking up the Autobahn with our own highways. By slowly encouraging German dependence even further we can secure a smoother recovery from Black Monday and even make a nice profit."
+BEL_Shipping:0 "독일의 해운 의존 유도"
+BEL_Shipping_desc:0 "독일 제국은 바다로 쉽게 접근할 수 있는데다가 아우토반과 우리 고속도로로 이어지는 광범위한 인프라를 갖춘 우리의 항구를 본인들의 영향권에서 가장 중요한 곳 중 하나로 여기고 있습니다. 해운 분야에서 독일이 우리에게 더욱 의존하도록 서서히 부추김으로써, 검은 월요일의 여파로 입은 우리의 피해를 더 수월하게 회복시킴은 물론이요, 잘하면 막대한 수익도 창출할 수 있을 것입니다."
 BEL_Diamant:0 "다이아몬드 산업 독점"
 BEL_Diamant_desc:0 "When you say diamond, you say Antwerp. As the world's biggest centre of the diamond trade, with 80% of all diamonds ending up in our city and bolstered by the support of the mostly Jewish population, we have almost a complete monopoly on the diamond trade in Mitteleuropa."
 BEL_Zeebrugge:0 "제브뤼헤 항구"
 BEL_Zeebrugge_desc:0 "Zeebrugge is our only real independent sea-port and can not be cut off by Dutch invaders and as such would be our prime location for building up our fleet."
 BEL_Industrial_Commitee:0 "산업 위원회 구성"
 BEL_Industrial_Commitee_desc:0 "A special commission consisting of representatives from all the large industries and members of government will be created and will convene to find a solution for our predicament."
-BEL_Invest_Liege_Economic_Zone:0 "시용 산업 투자"
-BEL_Invest_Liege_Economic_Zone_desc:0 "To combat the rising unemployment and spread of syndicalism in the Walloon province of Liège, a large expansion of the civilian industry around the provincial capital has been proposed."
-BEL_Seraing:0 "세랭 제강 공장"
+BEL_Invest_Liege_Economic_Zone:0 "민간 산업 투자"
+BEL_Invest_Liege_Economic_Zone_desc:0 "리에주에서의 늘어나는 실업률이 생디칼리즘의 확산으로 연계되는 사태를 막기 위해, 주도를 둘러싼 민간 산업의 대규모 확대가 제안되었습니다."
+BEL_Seraing:0 "세랭 제철소"
 BEL_Seraing_desc:0 "To bolster our industrial expansion we will need to expand the steel mills to reduce our dependence on German steel."
 BEL_Fund_Cimentieres:0 "시멘트 및 벽돌 공장 투자"
 BEL_Fund_Cimentieres_desc:0 "To finally get rid of the aftermath of Black Monday, the commission has come up with a bold plan. They propose to massively invest in the Cement industry to be able to sustain the large infrastructure projects throughout Europe. By creating a large enough supply combined with our technological experience we will surely be able to dominate the market and steer our country to a more profitable future."
